# STORM

./: .gitignore  README.md  pyproject.toml  requirements-gpu-cu121.txt  setup.py
docs/: api.rst  conf.py  credits.rst  dev.rst  index.rst  install.rst  release.rst  tutorials.rst
examples/: prepare_5tmp_inputs.py  prepare_reftarg160_inputs.py  tutorial_1_preprocess.ipynb  tutorial_2_train.ipynb  tutorial_3_clustering.ipynb  tutorial_4_evaluation.ipynb  tutorial_5_gp_activity.ipynb  tutorial_6_gp_visualization.ipynb
preprocessing_files/: combined_chr.gtf  top_150_marker_genes_per_ClusterName.csv
storm/: __init__.py  _internal.py  check.py  clustering.py  data.py  evaluation.py  genomics.py  graph.py  metrics.py  programs.py
storm/models/: __init__.py  base.py  dataset.py  dx.py  glue.py  losses.py  nn.py  plugins.py  sc.py  storm.py
storm/preprocessing/: __init__.py  _helpers.py  gene_programs.py  multimodal_mapping.py
