[build-system]
requires = ["setuptools", "wheel", "flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "storm"
version = "0.3.2"
description = "STORM: Spatial Temporal Omics Regulatory Modeling for paired multi-omics spatial data integration"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "l13a", email = "yj348@yale.edu"}
]
keywords = ["bioinformatics", "deep-learning", "single-cell", "single-cell-multiomics"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    # numpy must stay <2: torch 2.3.x, scib and the spatialdata/squidpy stack
    # are built against the numpy 1.x ABI.
    "numpy>=1.19,<2",
    "scipy>=1.3",
    "pandas>=1.1",
    "matplotlib>=3.1.2",
    "seaborn>=0.9",
    "dill>=0.2.3",
    "tqdm>=4.27",
    "scikit-learn>=0.21.2",
    "statsmodels>=0.10",
    "parse>=1.3.2",
    "networkx>=2",
    "pynvml>=8.0.1",
    "torch>=1.8",
    "torch-geometric>=2.3",
    "pytorch-ignite>=0.4.1",
    "tensorboardX>=1.4",
    "anndata>=0.7",
    "scanpy>=1.5",
    "squidpy>=1.2",
    "pybedtools>=0.8.1",
    "h5py>=2.10",
    "sparse>=0.3.1",
    "packaging>=16.8",
    "leidenalg>=0.7",
    "POT>=0.8",
    # decoupler 2.x dropped the top-level `get_collectri` used by
    # storm.preprocessing; 1.8.x also fixes a numba>=0.60 gsva incompatibility.
    "decoupler>=1.8,<2",
    "omnipath>=1.0",
    "pyreadr>=0.4",
    "rpy2>=3.5,<3.6"
]

[project.optional-dependencies]
# torch_sparse / torch_scatter are *not* on PyPI for every torch+CUDA pair —
# they have to come from the PyG wheel index. They are listed here so that
# pip can find them once the user has added the wheel index, e.g.:
#   pip install storm[gnn] -f https://data.pyg.org/whl/torch-2.3.0+cu121.html
gnn = [
    "torch-sparse>=0.6",
    "torch-scatter>=2.1"
]
# Evaluation metrics that rely on scib (PCR, NMI).
eval = [
    "scib>=1.1"
]
doc = [
    "sphinx<7",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "nbsphinx",
    "sphinx-rtd-theme",
    "ipython",
    "jinja2"
]
test = [
    "plotly",
    "pytest",
    "pytest-cov"
]

[tool.flit.sdist]
include = ["storm/", "examples/", "docs/", "LICENSE", "README.md"]
exclude = ["**/__pycache__/", "**/.ipynb_checkpoints/", "docs/_build/", "examples/artifacts/storm_tutorial/figures/*", "examples/artifacts/storm_tutorial/model/*"]
